--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-repeat: repeat;
     background-position: center;
     background-attachment: fixed;
-    background-color: lightblue;
+    background-color: whitesmoke;
    }
 
-   
+  
